--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -11,7 +11,7 @@ block content
     div.centre-header
       h1.centre-h1 EOS Voter
     div.pageheaderitem.signupbuttoncontainer
-      a.signupbutton(href='/vote') Vote Now with Scatter
+      a.signupbutton(href='/vote') Vote Now
   div.pageheader-spacer
   div.content-container
     div !{landing_page_content}
