--- a/eos-voter/views/layout.jade
+++ b/eos-voter/views/layout.jade
@@ -5,6 +5,7 @@ html
       title EOS Voter by EOSphere
       link(rel='stylesheet', href='/stylesheets/style.css')
       link(rel='shortcut icon', href='/images/vote-one.png', type='image/x-icon')
+      link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
 
       // HTML Meta Tags
       meta(name="description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
@@ -21,7 +22,7 @@ html
       meta(property="og:description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
       meta(property="og:image", content="http://eosphere.io/eosphere-io-eos-voter.png")
 
-      // Twitter Meta Tags 
+      // Twitter Meta Tags
       meta(name="twitter:card", content="summary_large_image")
       meta(name="twitter:title", content="EOS Voter by EOSphere")
       meta(name="twitter:description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
