Fix last minute bugs

--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -15,7 +15,7 @@
 body {
   padding: 10px;
   font: 15px "hindregular", Helvetica, Arial, sans-serif;
-  background-color: #EEE;
+  background-color: #FBFBFB;
   margin: 0px;
   padding: 0px;
   color: #1A1A1A;
