Remove the amount as EOS needed to activate the chain

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -18,7 +18,7 @@ block content
     p.centre Currently connected to the #{chainname} network.
     p.centre Chain id = #{chainid}.
     p.centre Percentage of EOS voting #{activated_percent}%
-    p.centre #{total_activated_stake} EOS have voted #{min_activated_stake} needed to activate the chain
+    p.centre #{total_activated_stake} EOS have voted
     h2.centre Active Block Producers
 
     div.block-producer-list
