--- a/eos-voter/public/stylesheets/style.css
+++ b/eos-voter/public/stylesheets/style.css
@@ -273,6 +273,15 @@ div.block-producer-list {
     background-color: #ffe;
 }
 
+.checkmark-register-proxy {
+/*    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;*/
+    background-color: #ddc;
+}
+
 /* On mouse-over, add a grey background color */
 .checkbox-container:hover input ~ .checkmark {
     background-color: #bbb;
