Show the last update time in an HTML comment

--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -5,6 +5,7 @@ block append head
     meta(http-equiv="refresh", content="2")
 
 block content
+  |<!-- updatetime = #{updatetime} -->
   div.pageheader
     div.pageheaderitem
       img.eoslogo(src='/images/Logo-dark-landscape-v2-1.png')
