--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -18,8 +18,9 @@ block content
     div !{landing_page_content}
     p.centre Currently connected to the #{chainname} network.
     p.centre Chain id = #{chainid}.
-    p.centre Percentage of EOS voting #{activated_percent}%
-    p.centre #{total_activated_stake} EOS have voted
+    //- p.centre Percentage of EOS voting #{activated_percent}%
+    //- p.centre #{total_activated_stake} EOS have voted
+    p.centre-activated Eos-Voter now supports scatter desktop.
     h2.centre Active Block Producers
 
     div.block-producer-list
