Change content to say telos

--- a/eos-voter/views/whatsthisbpnamemismatch.jade
+++ b/eos-voter/views/whatsthisbpnamemismatch.jade
@@ -5,7 +5,7 @@ block content
     div.pageheaderitem
       img.eoslogo(src='/images/Logo-dark-landscape-v2-1.png')
     div.centre-header
-      h1.centre-h1 EOS Voter
+      h1.centre-h1 Telos Voter
   div.pageheader-spacer
   div.content-container
     div !{message}
