--- a/eos-voter/views/layout.jade
+++ b/eos-voter/views/layout.jade
@@ -2,30 +2,30 @@ doctype html
 html
   head
     block head
-      title EOS Voter by EOSphere
+      title Telos Voter by EOSphere
       link(rel='stylesheet', href='/stylesheets/style.css')
       link(rel='shortcut icon', href='/images/vote-one.png', type='image/x-icon')
       link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
 
       // HTML Meta Tags
-      meta(name="description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
+      meta(name="description", content="Telos Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
 
       // Google / Search Engine Tags
-      meta(itemprop="name", content="EOS Voter by EOSphere")
-      meta(itemprop="description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
+      meta(itemprop="name", content="Telos Voter by EOSphere")
+      meta(itemprop="description", content="Telos Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
       meta(itemprop="image", content="http://eosphere.io/eosphere-io-eos-voter.png")
 
       // Facebook Meta Tags
       meta(property="og:url", content="http://eosvoter.eosphere.io")
       meta(property="og:type", content="website")
-      meta(property="og:title", content="EOS Voter by EOSphere")
-      meta(property="og:description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
+      meta(property="og:title", content="Telos Voter by EOSphere")
+      meta(property="og:description", content="Telos Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
       meta(property="og:image", content="http://eosphere.io/eosphere-io-eos-voter.png")
 
       // Twitter Meta Tags
       meta(name="twitter:card", content="summary_large_image")
-      meta(name="twitter:title", content="EOS Voter by EOSphere")
-      meta(name="twitter:description", content="EOS Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
+      meta(name="twitter:title", content="Telos Voter by EOSphere")
+      meta(name="twitter:description", content="Telos Voter is a web portal created to interact with the EOS Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
       meta(name="twitter:image", content="http://eosphere.io/eosphere-io-eos-voter.png")
 
       // Meta Tags Generated via http://heymeta.com
