--- a/eos-voter/views/index.jade
+++ b/eos-voter/views/index.jade
@@ -20,7 +20,7 @@ block content
     p.centre Chain id = #{chainid}.
     //- p.centre Percentage of EOS voting #{activated_percent}%
     //- p.centre #{total_activated_stake} EOS have voted
-    p.centre-activated Eos-Voter now supports scatter desktop.
+    p.centre Click Vote Button for voting and additional tools (requires Scatter Desktop).
     h2.centre Active Block Producers
 
     div.block-producer-list
