Add new social media graphic for the Telos Voter

--- a/eos-voter/views/layout.jade
+++ b/eos-voter/views/layout.jade
@@ -20,13 +20,13 @@ html
       meta(property="og:type", content="website")
       meta(property="og:title", content="Telos Voter by EOSphere")
       meta(property="og:description", content="Telos Voter is a web portal created to interact with the Telos Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
-      meta(property="og:image", content="http://eosphere.io/eosphere-io-eos-voter.png")
+      meta(property="og:image", content="https://telosvoter.eosphere.io/images/TelosVoter_cropped.jpg")
 
       // Twitter Meta Tags
       meta(name="twitter:card", content="summary_large_image")
       meta(name="twitter:title", content="Telos Voter by EOSphere")
       meta(name="twitter:description", content="Telos Voter is a web portal created to interact with the Telos Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
-      meta(name="twitter:image", content="http://eosphere.io/eosphere-io-eos-voter.png")
+      meta(name="twitter:image", content="https://telosvoter.eosphere.io/images/TelosVoter_cropped.jpg")
 
       // Meta Tags Generated via http://heymeta.com
 
