--- a/eos-voter/views/layout.jade
+++ b/eos-voter/views/layout.jade
@@ -16,7 +16,7 @@ html
       meta(itemprop="image", content="http://eosphere.io/eosphere-io-eos-voter.png")
 
       // Facebook Meta Tags
-      meta(property="og:url", content="http://eosvoter.eosphere.io")
+      meta(property="og:url", content="http://telosvoter.eosphere.io")
       meta(property="og:type", content="website")
       meta(property="og:title", content="Telos Voter by EOSphere")
       meta(property="og:description", content="Telos Voter is a web portal created to interact with the Telos Mainnet blockchain and provides services such as monitoring, voting and staking. It uses the scatter browser client to store you private information and does not keep any of your personal information in the server.")
